--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title> Hello World! </title>
+	<title> Sovaleva Viktorya ISTbd-32 </title>
 </head>
 <body>
+	<div>
+		<h1>Helllo World!</h1>
+	</div>
 	<script>
 	alert("Hello World")
 	</script>
